<resources>
    <string name="app_name">TroTot</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    // Related to sign up and log in
    <string name="title">TRỌ TỐT</string>
    <string name="tt_login">LOG IN</string>
    <string name="tt_signup">SIGN UP</string>
    <string name="hint_user">User Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_pass">Password</string>
    <string name="hint_login">Log In</string>
    <string name="hint_signup">Sign Up</string>
    <string name="hint_cancel">Cancel</string>
    <string name="sign_up">Create a new account?</string>
    <string name="sign_in">I have an account !</string>
    <string name="hint_repassword">Reset password</string>
    <string name="signup">Sign Up</string>
    <string name="username">User Name</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="repassword">Confirm Password</string>
    <string name="remember_password">Remember me</string>
    <string name="forgot">I forgot my password!</string>
    <string name="already_user">I have an account. Log In now!</string>
    <string name="newUser">I dont have an account. Sign up now!</string>
    <string name="Forgot_pass">Forgot Password</string>
    <string name="forgot_text">To receive a link for setting a new pass word,\nplease enter  your email!</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_success"></string>
    <string name="success_text">Your password has been changed. \nPlease log in to continue!</string>
    //

    //Related to post
    <string name="post_title">Tiêu đề bài đăng</string>
    <string name="post_info">Thông tin bài đăng</string>
    <string name="img_detail">Ảnh chi tiết nhà trọ cho thuê:</string>
    <string name="dia_chi">Địa chỉ:</string>
    <string name="dien_tich">Diện tích:</string>
    <string name="tien_dien">Tiền điện:</string>
    <string name="tien_nuoc">Tiền nước:</string>
    <string name="ve_sinh">Vệ sinh:</string>
    <string name="chu_tro">Chủ trọ:</string>
    <string name="sdt">Diện thoại:</string>
    <string name="btn_dang">Đăng tin:</string>
    <string name="btn_post">Post</string>
    <string name="question_post">Bạn có phòng cho thuê?</string>
    <string name="question_mean">What's on your mean?</string>
    <string name="introduce_title">Giới thiệu phòng trọ</string>
    <string name="introduce_detail">
        Nội dung giới thiệu phòng trọ.
        \nCác lưu ý của chủ trọ hoặc là nội dung kèm theo
    </string>
    <string name="info_tro">Thông tin phòng trọ</string>
    <string name="status">Tình trạng phòng trọ</string>
    <string name="btn_xem_them">Xem thêm</string>
    //
    <string name="reply">Reply yêu cầu</string>
    <string name="manage">Quản lý phòng</string>
    <string name="mesage">Tin nhắn</string>


    // fragment About
    <string name="welcome"> Chào mừng bạn đến với Trọ Tốt</string>
    <string name="about">
        \t Phần lớn mọi người (những ai sống xa nhà) chắc cũng đã đều trải qua giai đoạn ở trọ. Và điều mệt mỏi nhất đó là đi tìm cho được phòng như ý để ở lâu dài.
        \n Sau một thời gian vừa phải sống ở khu nhà này, bây giờ cũng đã đến lúc mình phải tìm nơi khác để chuyển đi vì nhiều lý do. Lên mạng tìm rồi vào chợ ứng dụng tìm các app về nhà trọ thì cũng thấy nhưng mà ít thông tin quá. Vì không phải chủ nhà nào cũng biết lên mạng mà đăng cho thuê. Mà mình thì đang trong cảnh cần chuyển gấp, thế là rốt cuộc cũng phải vác xe ra đường rong ruổi hỏi thăm từng khu phố để hỏi xem có ai cho thuê không. May mà mùa này còn mát mẻ.
        \n Loăn xoăn cũng được hơn một tuần rồi, xem cũng khá nhiều phòng nhưng vẫn chưa như ý. Nhưng chợt nghĩ đến một ý tưởng đó là có một cái bản đồ nhà trọ trên toàn quốc, chỉ việc ở nhà xem, thấy cái nào được thì đánh dấu lại rồi tới hỏi xem có còn cho thuê không
        \n Đó là lý do cái ứng dụng này ra đời.
    </string>
    <string name="contact">Hot line: 0969696969 \nEmail: contact@trotot.com</string>

    //fragment Support
    <string name="text_support">
        \tHiện tại TRỌ TỐt đang ở gii đoạn phát triển. Nếu bạn có ý kiến đóng góp hoặc nhận thấy hệ thống hoạt động lỗi, vui lòng thông báo với chúng tôi để sản phẩm được hoàn thiện hơn.
        Xin cảm ơn!
    </string>
    <string name="gui_phan_hoi"> Gửi phản hồi </string>
    <string name="hint_ykien">Ý kiến của bạn</string>
    <string name="submit">Gửi</string>
    //


    //string room manage
    <string-array name="location">
        <item>Khu vực</item>
        <item>Liên Chiểu</item>
        <item>Thanh Khê</item>
        <item>Hải Châu</item>
        <item>Hòa Vang</item>
    </string-array>
    <string-array name="rate">
        <item>Giá phòng</item>
        <item>Ít hơn 700k</item>
        <item>700k-1200k</item>
        <item>Lớn hơn 1200k</item>
    </string-array>



</resources>
