<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Navi.menu1.InforToPostActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_infor_post"
        android:background="@color/tab_layout_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </android.support.v7.widget.Toolbar>

    <TextView
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/post_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:padding="5dp"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/img_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/image_infor_post"
                android:scaleType="fitXY"
                android:src="@drawable/image"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <TextView
                android:text="@string/dia_chi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/dien_tich"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/tien_dien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/tien_nuoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/ve_sinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/sdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/btn_dang"
                android:background="@drawable/button"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>



</LinearLayout>