<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <!--<TextView-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:padding="10dp"-->
        <!--android:text="@string/login"-->
        <!--android:textSize="25sp"-->
        <!--android:textStyle="bold" />-->

        <EditText
            android:drawableLeft="@drawable/email"
            android:id="@+id/login_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="18dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            />

        <EditText
            android:id="@+id/login_password"
            android:drawableLeft="@drawable/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp">

            <CheckBox
                android:id="@+id/remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_password"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:textColor="#000"
                android:text="@string/forgot"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:textAllCaps="false"
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/button"
            android:padding="3dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/middle_size"
            android:textStyle="bold"

            />
    </LinearLayout>

    <TextView
        android:textColor="#000"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/newUser"

        android:textSize="@dimen/middle_size" />
</LinearLayout>