<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupportFragment">

    <!-- TODO: Support fragment layout -->
    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_support" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gui_phan_hoi"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_sp_email"/>
        <EditText
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_sp_content"
            android:textSize="@dimen/middle_size"/>
        <Button

            android:baselineAlignBottom="true"
            android:background="@drawable/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sp_submit"
            android:text="@string/submit"/>

    </LinearLayout>

</FrameLayout>